# libqrencode-ng

./: CMakeLists.txt  Doxyfile  README.md  qrencode.1.in
cmake/: FindIconv.cmake  qrencode-config.cmake.in
src/: bitstream.c  qrenc.c  qrencode.c  qrencode.h  qrinput.c  qrinput.h  qrspec.c  rsecc.c  split.c  split.h
tests/: CMakeLists.txt  common.h  create_frame_pattern.c  create_mqr_frame_pattern.c  datachunk.h  decoder.c  decoder.h  prof_qrencode.c  pthread_qrencode.c  rsecc_decoder.c  test_bitstream.c  test_estimatebit.c  test_mask.c  test_mmask.c  test_monkey.c  test_mqrspec.c  test_qrencode.c  test_qrinput.c  test_qrspec.c  test_rs.c  test_split.c  test_split_urls.c  view_qrcode.c
